--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@ body {
     opacity: 1;
     transition: opacity 0.4s ease 0.3s;
 }
+
+@media (max-width: 576px) {
+    .container {
+        width: 100vw;
+    }
+
+    .panel:nth-of-type(4), .panel:nth-of-type(5) {
+        display: none;
+    }
+}
